fixed header scroller on mobile, larger images & text, zoomed in google maps on Contacts page, created scrol lto anchor on What We do page, still neds some fixing up

--- a/css/scss/_classes.scss
+++ b/css/scss/_classes.scss
@@ -35,6 +35,10 @@
 	background-color: #f0f0f0;
 }
 
+.dark-yellow {
+	color: #f7ad00;
+}
+
 /* =============================================================================
    Text
    ========================================================================== */
